EC-CUBEデプロイ困ったポイント記事編集

--- a/articles/c8f90587bbf539.md
+++ b/articles/c8f90587bbf539.md
@@ -121,7 +121,7 @@ monolog:
 そのため、sess_lifetimeのデータ型をsess_timeに合わせて`INTEGER UNSIGNED`と変更しました。
 :::
 
-## CSS、画像ファイルが配信されない
+## CSS、JS、画像ファイルが配信されない
 こちらはapp.yamlに以下のhandlersを追加することで配信できるようになりました。
 
 :::details app.yaml
