EC-CUBEデプロイ困ったポイント記事編集

--- a/articles/c8f90587bbf539.md
+++ b/articles/c8f90587bbf539.md
@@ -117,7 +117,7 @@ monolog:
 参考: https://doc4.ec-cube.net/session_handler_settings#rdbms%E3%81%AB%E4%BF%9D%E5%AD%98%E3%81%99%E3%82%8B
 
 :::message alert
-上記のページを参考にsessionsテーブルを作成したところ、なぜか、sess_lifetimeの実際のデータがデータ型(`MEDIUMINT`)を上回っておりエラーとなりました。
+上記のページを参考にsessionsテーブルを作成したところ、なぜか、sess_lifetimeに登録される文字列長がデータ型(`MEDIUMINT`)を上回っておりエラーとなりました。
 そのため、sess_lifetimeのデータ型をsess_timeに合わせて`INTEGER UNSIGNED`と変更しました。
 :::
 
