EC-CUBEデプロイ困ったポイント記事編集

--- a/articles/c8f90587bbf539.md
+++ b/articles/c8f90587bbf539.md
@@ -19,7 +19,7 @@ Symfony 5.4
 PHP 7.4
 MySQL 5.7
 
-## ログ・キャッシュ・セッションがうまく出力できない
+## ログ・キャッシュ・セッションがうまく出力されない
 EC-CUBEのデフォルト設定だと `var/` 配下にログ・キャッシュ・セッションのディレクトリが作成されるようになっていますが、App Engineから作成できずエラーとなっていました。
 
 ### ログ対応
