EC-CUBEデプロイ困ったポイント記事編集

--- a/articles/c8f90587bbf539.md
+++ b/articles/c8f90587bbf539.md
@@ -89,7 +89,7 @@ monolog:
 ```
 :::
 
-### キャッシュ
+### キャッシュ対応
 キャッシュの保存場所をApp Engineが書き込めるtmp配下に変更しました。ここでは念のためログの出力先もtmp配下に変えています。
 
 :::details src/Eccube/Kernel.php
@@ -112,7 +112,7 @@ monolog:
 ```
 :::
 
-### セッション
+### セッション対応
 セッションの保存場所をDBに変更しました。
 参考: https://doc4.ec-cube.net/session_handler_settings#rdbms%E3%81%AB%E4%BF%9D%E5%AD%98%E3%81%99%E3%82%8B
 
