--- a/articles/1478c01df8d279.md
+++ b/articles/1478c01df8d279.md
@@ -34,7 +34,7 @@ https://developers.cloudflare.com/workers/wrangler/configuration/
 wrangler dev src/index.ts
 ```
 
-これを以下ページを参考に--remoteフラグを追加したところ、リモートのR2を見に行くようになった
+これを以下ページを参考に`--remote`フラグを追加したところ、リモートのR2を見に行くようになった
 ```
 wrangler dev src/index.ts --remote
 ```
