--- a/articles/823a1e431bad0a.md
+++ b/articles/823a1e431bad0a.md
@@ -11,7 +11,7 @@ published: true
 参考: https://vercel.com/docs/projects/managing-projects#pause-a-project-using-the-rest-api
 
 2023年12月現在、Vercelのプロジェクトを管理画面から停止することはできません。
-代わりに[プロジェクト一時停止API](https://vercel.com/docs/rest-api/endpoints#pause-a-project)が用意されているので、それを使って一時停止を行います。
+代わりに[プロジェクト一時停止API](https://vercel.com/docs/projects/managing-projects#pause-a-project-using-the-rest-api)が用意されているので、それを使って一時停止を行います。
 
 APIリクエストに必要な値は以下です。
 - アクセストークン
